Updating API to incorporate all latencies
